SONAR-16419 merge rules and rules metadata in single table and DTO